--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "dompdf/dompdf": "^1.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^6.0",
+        "kopokopo/k2-connect-php": "^1.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5"
     },
