--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-json": "*",
+        "brick/math": "^0.11.0",
         "doctrine/dbal": "^3.2",
         "dompdf/dompdf": "^1.0",
         "fideloper/proxy": "^4.4",
